--- a/sandbox/genesis_tree.ipynb
+++ b/sandbox/genesis_tree.ipynb
@@ -398,11 +398,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0f0121f3087aeba530c63e0db60f5171c3cec0582e3d1e3d78c528d6eb18d107"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -416,9 +413,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff361fb7266ee60318126be59f6136951f4b2feb882ba563235782f13141947e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
